Rename + added requirements.txt

--- a/basic-rag.ipynb
+++ b/basic-rag.ipynb
@@ -78,6 +78,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "924d9c6d-5064-4611-a3d8-3bbf89337d9e",
+   "metadata": {},
+   "source": [
+    "## Running Similarity Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "bef857c0-0535-4af0-a38f-e194c0a6ff29",
