--- a/agents-rag.ipynb
+++ b/agents-rag.ipynb
@@ -187,23 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "0a007e0f-42dc-4a70-9d91-9d3ec3b48563",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='LeBron James was born in Akron, Ohio, on December 30, 1984.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 19, 'prompt_tokens': 12, 'total_tokens': 31, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-59f727fc-5b2b-481e-bb68-32c8ccf42aed-0', usage_metadata={'input_tokens': 12, 'output_tokens': 19, 'total_tokens': 31})"
+       "AIMessage(content='As of October 2023, LeBron James is playing for the Los Angeles Lakers in the NBA. If you need more specific information or updates, please let me know!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 35, 'prompt_tokens': 12, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-5a1a2a5f-30cd-4cbf-9862-e8879fbdcda4-0', usage_metadata={'input_tokens': 12, 'output_tokens': 35, 'total_tokens': 47})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm.invoke(\"where is lebron born\", temperature=0.2)"
+    "llm.invoke(\"where is lebron currently\", temperature=0.2)"
    ]
   },
   {
