--- a/agents-rag.ipynb
+++ b/agents-rag.ipynb
@@ -187,23 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "0a007e0f-42dc-4a70-9d91-9d3ec3b48563",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='As of October 2023, LeBron James is playing for the Los Angeles Lakers in the NBA. If you need more specific information or updates, please let me know!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 35, 'prompt_tokens': 12, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-5a1a2a5f-30cd-4cbf-9862-e8879fbdcda4-0', usage_metadata={'input_tokens': 12, 'output_tokens': 35, 'total_tokens': 47})"
+       "AIMessage(content=\"As of October 2023, LeBron James is playing for the Los Angeles Lakers in the NBA. If you're looking for the most current updates or specific details, please check the latest sports news sources.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 41, 'prompt_tokens': 12, 'total_tokens': 53, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-f07277dc-aefc-4422-9fc7-aafea256c381-0', usage_metadata={'input_tokens': 12, 'output_tokens': 41, 'total_tokens': 53})"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm.invoke(\"where is lebron currently\", temperature=0.2)"
+    "llm.invoke(\"where is lebron currently\", temperature=0.1)"
    ]
   },
   {
@@ -216,8 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "530f2be2-ed29-4c57-8592-7430bbbb3562",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3353722a-2fd3-4643-b920-334e843eb6e9",
    "metadata": {},
    "outputs": [],
    "source": []
