--- a/agents-rag.ipynb
+++ b/agents-rag.ipynb
@@ -238,7 +238,9 @@
    "id": "3353722a-2fd3-4643-b920-334e843eb6e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print()"
+   ]
   }
  ],
  "metadata": {
