Adding basic agent executor

--- a/agents-rag.ipynb
+++ b/agents-rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "9035dd07-4ad4-4a25-b371-0d313871a252",
    "metadata": {},
    "outputs": [],
@@ -19,12 +19,13 @@
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "from langchain.tools.retriever import create_retriever_tool\n",
-    "from langchain.agents import create_tool_calling_agent"
+    "from langchain.agents import create_tool_calling_agent\n",
+    "from langchain.agents import AgentExecutor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "3ef5c28f-c333-4dbb-8c9b-a15752b26034",
    "metadata": {},
    "outputs": [
@@ -34,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "bc2212f1-ef90-469e-a122-68e8689c852b",
    "metadata": {},
    "outputs": [],
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "3a09701a-4dd4-4edd-9e71-9dd0ec1e3d62",
    "metadata": {},
    "outputs": [],
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "b43ace9a-1e94-4760-8a85-b1663dead7c1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "8ec3381c-9789-4737-b0d8-32f047957094",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "f822fdf8-bdae-423b-a018-b3f1ad370ee7",
    "metadata": {},
    "outputs": [
@@ -104,14 +105,14 @@
      "data": {
       "text/plain": [
        "[{'url': 'https://www.yelp.com/search?cflt=sushi&find_loc=Los+Angeles,+CA',\n",
-       "  'content': 'Best Sushi Bars in Los Angeles, CA - Sushi by Scratch Restaurants: LA, Iki Nori, Sushi Gen, Yeon Omakase and Sushi, Hato Sushi, Izakaya Osen - Los Angeles, Sushi Ye, Murakami, Kingyubu, Yunomi Handroll'},\n",
+       "  'content': 'Best Sushi Bars in Los Angeles, CA - Sushi by Scratch Restaurants: LA, Sushi Gen, Yeon Omakase and Sushi, Iki Nori, Hato Sushi, Izakaya Osen - Los Angeles, Sakana Sushi Lounge DTLA, Sushi Ye, Murakami, Ariyoshi Sushi Cafe Izakaya'},\n",
        " {'url': 'https://www.timeout.com/los-angeles/restaurants/best-sushi-restaurants-in-la',\n",
        "  'content': \"The best sushi in Los Angeles. Whether you're looking to splurge or save, the best L.A. sushi bars will satisfy your craving for immaculately cut raw fish. Tuesday August 27 2024.\"},\n",
-       " {'url': 'https://www.yelp.com/biz/sushi-gen-los-angeles',\n",
-       "  'content': 'My girlfriend has been here a thousand times and she swears that it\\'s the best sushi in Los Angeles for its price. It is her \"worth it winner.\" Come here early before it opens because there will be a wait for this great deal. Read more. Angela P. Elite 24. Alhambra, CA. 77. 108. 292. Jul 11, 2024.'}]"
+       " {'url': 'https://www.yelp.com/search?find_desc=sushi&find_loc=Los+Angeles,+CA',\n",
+       "  'content': 'Top 10 Best sushi Near Los Angeles, California. 1. Yeon Omakase and Sushi. 2. Izakaya Osen - Los Angeles. 3. Chubby Cattle Little Tokyo. 4. Hato Sushi.'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "ba74821c-47b9-4d42-878b-a5840e2e6e40",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "3c96f9d3-122f-48a0-966d-9f795d10cbfe",
    "metadata": {},
    "outputs": [
@@ -142,7 +143,7 @@
        "Document(id='fc165d3d-c44c-470c-9217-b83cfe78a4cf', metadata={'address': '116 Japanese Village Plaza Mall, Los Angeles, CA 90012, USA', 'name': 'Sushi & Teri', 'place_id': 'ChIJizyr7UfGwoARt2VuQwQ0eIw', 'rating': 4.1}, page_content='Sushi & Teri is a small, inexpensive Japanese restaurant located in Little Tokyo, offering a variety of sushi rolls, ramen, miso soup, and cucumber salad. Customers generally feel that the food is decent but not exceptional, with notable mentions of the Alaska and Baja rolls, Washington roll, ramen served piping hot, and the cucumber salad. Key pros include friendly service, affordable prices, and the convenience of ordering via tablet, while cons revolve around long wait times, understaffing issues, and smaller portion sizes compared to nearby restaurants.')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "ce1bd7ad-8d73-4690-b7a7-c26a24f4e04e",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "800cc450-a76b-40a7-8b06-843ca5f3d4f6",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "8670aed3-b493-4be5-8405-e9e08b74afbb",
    "metadata": {},
    "outputs": [],
@@ -187,23 +188,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "0a007e0f-42dc-4a70-9d91-9d3ec3b48563",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content=\"As of October 2023, LeBron James is playing for the Los Angeles Lakers in the NBA. If you're looking for the most current updates or specific details, please check the latest sports news sources.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 41, 'prompt_tokens': 12, 'total_tokens': 53, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-f07277dc-aefc-4422-9fc7-aafea256c381-0', usage_metadata={'input_tokens': 12, 'output_tokens': 41, 'total_tokens': 53})"
+       "AIMessage(content=\"As of October 2023, LeBron James is playing for the Los Angeles Lakers in the NBA. If you need more specific or updated information, please check the latest sports news or the NBA's official website.\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 43, 'prompt_tokens': 12, 'total_tokens': 55, 'completion_tokens_details': {'reasoning_tokens': 0}, 'prompt_tokens_details': {'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_f85bea6784', 'finish_reason': 'stop', 'logprobs': None}, id='run-b1806b6e-808e-428b-a17a-834054b090b7-0', usage_metadata={'input_tokens': 12, 'output_tokens': 43, 'total_tokens': 55})"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "llm.invoke(\"where is lebron currently\", temperature=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c1debb9f-f57c-46ef-86be-f31bfbacdbf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = hub.pull(\"hwchase17/openai-functions-agent\")"
    ]
   },
   {
@@ -216,31 +227,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "530f2be2-ed29-4c57-8592-7430bbbb3562",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print()"
+    "agent = create_tool_calling_agent(llm, tools, prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3353722a-2fd3-4643-b920-334e843eb6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3353722a-2fd3-4643-b920-334e843eb6e9",
+   "id": "35732d29-0f5c-4bc4-b58a-26feeb342d7b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
